--- a/cs/FaceSentimentAnalysisTestApp/MainPage.xaml
+++ b/cs/FaceSentimentAnalysisTestApp/MainPage.xaml
@@ -17,7 +17,9 @@ Copyright (C) Microsoft Corporation. All rights reserved.
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     Loaded="Page_Loaded">
 
+    <ScrollViewer>
     <StackPanel>
+        
         <TextBlock Name="UISkillName" Text="Skill name" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold"/>
 
         <TextBlock Text="Skill Description:" FontWeight="Bold"/>
@@ -52,5 +54,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                      TextAlignment="Center" />
         </Grid>
 
+        <TextBox Name="UISkillOutputDetails" Text="Skill output var description" IsReadOnly="True" AcceptsReturn="True"/>
     </StackPanel>
+    </ScrollViewer>
 </Page>
