--- a/cs/FaceSentimentAnalysisTestApp/MainPage.xaml
+++ b/cs/FaceSentimentAnalysisTestApp/MainPage.xaml
@@ -41,7 +41,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                 IsEnabled="false"
                 Click="UIButtonFilePick_Click" HorizontalAlignment="Center"/>
         <Grid MinWidth ="400" MinHeight="400" MaxWidth="400" MaxHeight="400" >
-            <Image Name="UIImageViewer" MinWidth ="400" MinHeight="400" MaxWidth="400" MaxHeight="400" Stretch="Uniform" Canvas.ZIndex="-1" SizeChanged="UIImageViewer_SizeChanged"/>
+            <Image Name="UIImageViewer" MinWidth ="400" MinHeight="400" MaxWidth="400" MaxHeight="400" Stretch="Fill" Canvas.ZIndex="-1" SizeChanged="UIImageViewer_SizeChanged"/>
             <Canvas Name="UICanvasOverlay" HorizontalAlignment="Center" VerticalAlignment="Center" Canvas.ZIndex="0"/>
 
             <TextBox Name="UISentiment"
