--- a/cs/FaceSentimentAnalysisTestApp/MainPage.xaml
+++ b/cs/FaceSentimentAnalysisTestApp/MainPage.xaml
@@ -51,7 +51,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                 </StackPanel>
             </controls:Expander>
             
-            <TextBlock Text="Select an image source to start!" HorizontalAlignment="Center"/>
+            <TextBlock Text="Select an image source to start" HorizontalAlignment="Center"/>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Name="UIButtonFilePick"
@@ -74,11 +74,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                 </Button>
             </StackPanel>
             <Grid MinWidth ="400" MinHeight="400" MaxWidth="400" MaxHeight="400" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="0*"/>
-                    <ColumnDefinition Width="13*"/>
-                    <ColumnDefinition Width="87*"/>
-                </Grid.ColumnDefinitions>
+
                 <Image Name="UIImageViewer" 
                        MinWidth ="400" 
                        MinHeight="400" 
@@ -86,8 +82,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                        MaxHeight="400" 
                        Stretch="Fill" 
                        Canvas.ZIndex="-1" 
-                       SizeChanged="UIImageViewer_SizeChanged" 
-                       Grid.ColumnSpan="3"/>
+                       SizeChanged="UIImageViewer_SizeChanged" />
                 <controls:CameraPreview 
                     Name="UICameraPreview" 
                     IsFrameSourceGroupButtonVisible="False" 
@@ -97,19 +92,16 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                     MaxHeight="400" 
                     Canvas.ZIndex="-1" 
                     Visibility="Collapsed" 
-                    SizeChanged="UIImageViewer_SizeChanged" 
-                    Grid.ColumnSpan="3"/>
+                    SizeChanged="UIImageViewer_SizeChanged" />
                 
-                <Canvas Name="UICanvasOverlay" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.ZIndex="0" Grid.ColumnSpan="3"/>
+                <Canvas Name="UICanvasOverlay" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.ZIndex="0"/>
 
-                <TextBox Name="UISentiment"
-                     Background="#7F000000"
-                     Text="---"
-                     VerticalAlignment="Top" 
-                     HorizontalAlignment="Left" 
-                     FontSize="12"
-                     IsReadOnly="true"
-                     TextAlignment="Center" Margin="116,0,0,0" Grid.Column="2" />
+                <TextBlock Name="UISentiment"
+                           Text="---"
+                           VerticalAlignment="Top" 
+                           HorizontalAlignment="Center" 
+                           FontSize="36"
+                           TextAlignment="Center"/>
             </Grid>
 
             <TextBox Name="UISkillOutputDetails" Text="Skill output var description" IsReadOnly="True" AcceptsReturn="True"/>
