--- a/cs/FaceSentimentAnalysisTestApp/MainPage.xaml
+++ b/cs/FaceSentimentAnalysisTestApp/MainPage.xaml
@@ -47,7 +47,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                     <TextBox Name="UISkillOutputDescription2" Text="Skill output var description" IsReadOnly="True" AcceptsReturn="True"/>
 
                     <TextBlock Text="Available execution devices:" FontWeight="Bold"/>
-                    <ListBox Name="UISkillExecutionDevices" />
+                    <ListBox Name="UISkillExecutionDevices" SelectionChanged="UISkillExecutionDevices_SelectionChanged"/>
                 </StackPanel>
             </controls:Expander>
             
@@ -85,7 +85,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                        SizeChanged="UIImageViewer_SizeChanged" />
                 <controls:CameraPreview 
                     Name="UICameraPreview" 
-                    IsFrameSourceGroupButtonVisible="False" 
+                    IsFrameSourceGroupButtonVisible="True" 
                     MinWidth ="400" 
                     MinHeight="400" 
                     MaxWidth="400" 
