--- a/samples/GalleryApp/ObjectDetectorPage.xaml
+++ b/samples/GalleryApp/ObjectDetectorPage.xaml
@@ -86,7 +86,8 @@
                 <Border BorderBrush="#66000000" BorderThickness="2">
                     <StackPanel>
                         <TextBlock Text="Status" TextDecorations="Underline" Style="{StaticResource TitleTextBlockStyle}" HorizontalAlignment="Center"/>
-                        <TextBlock Name="UIMessageTextBlock" Text="Select an image source to start" HorizontalAlignment="Center" />
+                        <TextBlock Name="UIMessageTextBlock" Text="Select an image source to start" 
+                                   HorizontalAlignment="Center" TextWrapping="Wrap"/>
                     </StackPanel>
                 </Border>
             </Grid>
