Add folder for each skill page

--- a/samples/GalleryApp/Pages/ObjectDetector/ObjectDetectorPage.xaml
+++ b/samples/GalleryApp/Pages/ObjectDetector/ObjectDetectorPage.xaml
@@ -42,7 +42,7 @@
                 <HyperlinkButton x:Name="GithubButton" Grid.Row="1" Grid.Column="0"
                                  HorizontalAlignment="Center"
                                  NavigateUri="https://github.com/microsoft/WindowsVisionSkillsPreview/tree/master/samples/ObjectDetector">
-                    <Image Source="../Assets/GitHub-Mark-32px.png" 
+                    <Image Source="../../Assets/GitHub-Mark-32px.png" 
                             Width="32"
                             Height="32"/>
                 </HyperlinkButton>
