--- a/samples/GalleryApp/Thumbnail.xaml
+++ b/samples/GalleryApp/Thumbnail.xaml
@@ -11,15 +11,15 @@
 
 
     <Grid Background="LightGray" Height="400" Width="400">
-        <Grid Height="200"  Width="400" VerticalAlignment="Bottom" HorizontalAlignment="Center">
-            <Rectangle Height="200" Width="400" VerticalAlignment="Bottom"
-                                                       Fill="Gray" Opacity="0.25"/>
-            <TextBlock Text="{x:Bind SkillName}" Padding="10, 0, 10, 0"
-                       Style="{StaticResource SubheaderTextBlockStyle}"/>
-            <TextBlock Text="{x:Bind SkillDescription}" Padding="10, 60, 10, 0"
-                       Style="{StaticResource BodyTextBlockStyle}"/>
+        <Grid Height="200" Width="400" VerticalAlignment="Bottom" 
+                      HorizontalAlignment="Center">
+            <Rectangle Height="200" Width="400" VerticalAlignment="Bottom" 
+                               Fill="Gray" Opacity="0.25"/>
+            <TextBlock Text="{x:Bind Name}" Padding="10, 0, 10, 0"
+                               Style="{StaticResource SubheaderTextBlockStyle}"/>
+            <TextBlock Text="{x:Bind Description}" Padding="10, 60, 10, 0"
+                               Style="{StaticResource BodyTextBlockStyle}"/>
         </Grid>
-        <Button Height="400" Width="400" Opacity="0" Click="NavigateToSkillPage"/>
     </Grid>
 
 </UserControl>
