--- a/samples/SkeletalDetector/cs/SkeletalDetectorSample_UWP/MainPage.xaml
+++ b/samples/SkeletalDetector/cs/SkeletalDetectorSample_UWP/MainPage.xaml
@@ -30,7 +30,7 @@
                     <StackPanel>
                         <TextBlock Name="UISkillName" Text="Skill name" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold"/>
                         <TextBlock Text="Skill Description:" FontWeight="Bold"/>
-                        <TextBox Name="UISkillDescription" Text="Loading skill description..." IsReadOnly="True" AcceptsReturn="True"/>
+                        <TextBox Name="UISkillDescription" IsReadOnly="True" AcceptsReturn="True"/>
                         <TextBlock Text="Skill input descriptions:" FontWeight="Bold" FontFamily="Segoe UI"/>
                         <TextBox Name="UISkillInputDescription" IsReadOnly="True" AcceptsReturn="True"/>
                         <TextBlock Text="Skill output descriptions:" FontWeight="Bold"/>
