--- a/samples/GalleryApp/Pages/ObjectDetectorPage.xaml
+++ b/samples/GalleryApp/Pages/ObjectDetectorPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<local:SkillPageBase
     x:Class="GalleryApp.ObjectDetectorPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -55,8 +55,10 @@
                 <Grid Grid.Row="1" Name="UIVideoFeed">
                     <!-- Video frame source controls -->
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Background="#B2000000">
-                        <AppBarButton x:Name="UICameraButton" Icon="AttachCamera" Label="Attach Camera" Click="UICameraButton_Click" Foreground="White" />
-                        <AppBarButton x:Name="UIFilePickerButton" Icon="BrowsePhotos" Label="Open File" ToolTipService.ToolTip="Load an image or video file from disk" Click="UIFilePickerButton_Click" Foreground="White" />
+                        <AppBarButton x:Name="UIButtonCamera" Icon="AttachCamera" Label="Attach Camera" 
+                                      Click="UIButtonCamera_Click" Foreground="White" IsEnabled="{x:Bind EnableButtons}"/>
+                        <AppBarButton x:Name="UIButtonFilePicker" Icon="BrowsePhotos" Label="Open File" ToolTipService.ToolTip="Load an image or video file from disk" 
+                                      Click="UIButtonFilePicker_Click" Foreground="White" IsEnabled="{x:Bind EnableButtons}"/>
                     </StackPanel>
 
                     <!-- Video display -->
@@ -120,4 +122,4 @@
             CursorBehavior="ChangeOnSplitterHover"
             Width="16" />
     </Grid>
-</Page>
+</local:SkillPageBase>
