Refactor UICameraButton_Click

--- a/samples/GalleryApp/Pages/ObjectDetectorPage.xaml
+++ b/samples/GalleryApp/Pages/ObjectDetectorPage.xaml
@@ -55,10 +55,10 @@
                 <Grid Grid.Row="1" Name="UIVideoFeed">
                     <!-- Video frame source controls -->
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Background="#B2000000">
-                        <AppBarButton x:Name="UIButtonCamera" Icon="AttachCamera" Label="Attach Camera" 
-                                      Click="UIButtonCamera_Click" Foreground="White" IsEnabled="{x:Bind EnableButtons}"/>
-                        <AppBarButton x:Name="UIButtonFilePicker" Icon="BrowsePhotos" Label="Open File" ToolTipService.ToolTip="Load an image or video file from disk" 
-                                      Click="UIButtonFilePicker_Click" Foreground="White" IsEnabled="{x:Bind EnableButtons}"/>
+                        <AppBarButton x:Name="UICameraButton" Icon="AttachCamera" Label="Attach Camera" 
+                                      Click="UICameraButton_Click" Foreground="White" IsEnabled="{x:Bind EnableButtons}"/>
+                        <AppBarButton x:Name="UIFilePickerButton" Icon="BrowsePhotos" Label="Open File" ToolTipService.ToolTip="Load an image or video file from disk" 
+                                      Click="UIFilePickerButton_Click" Foreground="White" IsEnabled="{x:Bind EnableButtons}"/>
                     </StackPanel>
 
                     <!-- Video display -->
